added new project js

--- a/index.html
+++ b/index.html
@@ -175,8 +175,20 @@
                     </h3>
                     <div class="project-details">
                         <ul>
-                            <li>Desenvolvimento de uma aplicação web para gerenciamento de serviços de lavagem de veículos utilizando node.js.</li>
-                            <li>Implementação de interface para cadastrar clientes, criar pedidos, adicionar funcionários e ver o histórico de pedidos.</li>
+                            <li>Aplicação web para gerenciamento de serviços de lavagem de veículos, desenvolvida em HTML, CSS, JavaScript e Node.js.</li>
+                            <li>Funcionalidades incluem cadastro de clientes, criação de pedidos, adição de funcionários e histórico de pedidos, com visualização por mês.</li>
+                            <li>Utilização das tecnologias Node.js, express e uuid para desenvolvimento do servidor e manipulação dos dados.</li>
+                        </ul>
+                    </div>
+
+                    <h3>
+                        <a href="https://github.com/AlexsandroFde/Keyword_Indexer" target="_blank">• Lista de Tarefas • Mar 2024</a>
+                        <span class="toggle-icon">▼</span>
+                    </h3>
+                    <div class="project-details">
+                        <ul>
+                            <li>Projeto em HTML, CSS e JavaScript para gerenciar uma lista de tarefas, permitindo adição, marcação de conclusão, exclusão e filtragem de tarefas.</li>
+                            <li>Funcionalidades incluem adicionar tarefas via entrada de texto, marcar como concluídas com caixas de seleção, excluir tarefas individualmente ou todas de uma vez e filtrar por status.</li>
                         </ul>
                     </div>
                     
