added responsive layout

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div class="container">
                 <div class="main-header">
                     <h1>ALEXSANDRO FERREIRA DA SILVA</h1>
+                    <div class="sidebar-icon">☰</div>
                     <div class="info">
                         <p>Fortaleza - CE</p>
                         <p>Celular: <a href="https://wa.me/558588959513" target="_blank">(85) 9 8895-9513</a></p>
@@ -295,6 +296,8 @@
         <footer>
             <p>&copy; 2024 Alexsandro Ferreira da Silva. Todos os direitos reservados.</p>
         </footer>
+
+        <div class="sidebar-overlay"></div>
 
         <script src="js/scripts.js"></script>
     </body>
