feat: update to portfolio

--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
                             <li>Contribui para a presença digital do cliente.</li>
                         </ul>
                     </ul>
+
+                    <p><strong>• Enicit • Nov 2024</strong></p>
+                    <ul>
+                        <ul>
+                            <li>Apresentei pesquisa sobre uso de redes neurais convolucionais (CNNs) no apoio à heteroidentificação racial com imagens faciais.</li>
+                            <li>Expliquei a metodologia de Transfer Learning, os resultados estatísticos e as implicações técnicas e sociais da solução desenvolvida.</li>
+                        </ul>
+                    </ul>
                 </section>
 
                 <section id="portfolio" class="section" style="display: none;">
@@ -88,6 +96,8 @@
                     <div class="menu">
                         <ul>
                             <a href="#flutter"><li>Desenvolvedor Flutter</li></a>
+                            <a href="#react"><li>Desenvolvedor React</li></a>
+                            <a href="#vue"><li>Desenvolvedor Vue.js</li></a>
                             <a href="#dart"><li>Desenvolvedor Dart</li></a>
                             <a href="#python"><li>Desenvolvedor Python</li></a>
                             <a href="#javascript"><li>Desenvolvedor JavaScript</li></a>
@@ -115,6 +125,38 @@
                         <ul>
                             <li>Desenvolvimento de um banco de dados para um sistema de venda de passagens de ônibus usando MySQL.</li>
                             <li>Implementação de interface para cadastrar usuários, comprar passagens, selecionar assentos e adicionar viagens.</li>
+                        </ul>
+                    </div>
+
+                    <h1 id="react">Desenvolvedor React</h1>
+                    <h3 class="project">
+                        • G-LIT (Gestor do Laboratório de Inovação Tecnológica) • Dez 2023 – Fev 2024
+                        <div class="overlay">
+                            Este projeto é privado.
+                        </div>
+                        <span class="toggle-icon">▼</span>
+                    </h3>
+                    <div class="project-details">
+                        <ul>
+                            <li>Desenvolvimento completo do frontend em React com TypeScript para sistema de gerenciamento de projetos, bolsistas e coordenadores.</li>
+                            <li>Integração com APIs REST para cadastro, edição e visualização de dados, com autenticação e controle de permissões por tipo de usuário.</li>
+                            <li>Implementação de visualizações detalhadas com perfis individuais, histórico acadêmico de bolsistas, e relacionamento entre projetos e responsáveis.</li>
+                        </ul>
+                    </div>
+
+                    <h1 id="vue">Desenvolvedor Vue.js</h1>
+                    <h3 class="project">
+                        • Portfólio do LIT • Nov 2023 – Dez 2023
+                        <div class="overlay">
+                            Este projeto é privado.
+                        </div>
+                        <span class="toggle-icon">▼</span>
+                    </h3>
+                    <div class="project-details">
+                        <ul>
+                            <li>Desenvolvimento de aplicação institucional em Vue.js para apresentar o laboratório e seus projetos de forma clara e responsiva.</li>
+                            <li>Integração com o backend do G-LIT para exibir projetos cadastrados dinamicamente, com filtros e ordenação por categorias ou responsáveis.</li>
+                            <li>Design moderno e leve, com foco em acessibilidade, performance e experiência do usuário.</li>
                         </ul>
                     </div>
                     
